# actix-diesel-pscale-demo

./: .env.md  Cargo.toml  README.md
migrations/2022-08-20-130422_init_schema/: down.sql  up.sql
src/: lib.rs  main.rs
src/dal/: org.rs
src/routes/: org.rs
static/: index.html
