[package]
name = "actix-diesel-pscale-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
diesel = { version = "1.4.8", features = ["mysql", "extras", "chrono"] }
dotenv = "0.15.0"
serde = "1.0.143"
serde_derive = "1.0.143"
chrono = { version = "0.4.22", features = ["serde"] }
actix-files = "0.6.2"
